Add Debian 9 stretch support

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -24,4 +24,5 @@ http {
     #gzip  on;
     include /etc/nginx/upstream/*.conf;
     include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*.conf;
 }
